--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello from Furina's worshippers</title>
+    <title>Hello from Furina's worshipper</title>
     <link rel="icon" type="png" sizes="16x16" href="favicon-32x32.png">
     <link rel="stylesheet" href="styles2.css">
     <style>
@@ -28,7 +28,7 @@
 <div class="scale-container" style="transform: scale(0.998532) translate(0.939794px, 0px);">
     <div class="text-center">
         <div class="small-font illustration-credit">
-            Hello from Furina's worshippers<br>
+            Hello from Furina's worshipper<br>
         </div>
         <div class="scrolling-wrapper" id="autoScrollDiv">
             <img src="furina0.jpg" alt="Image 1" class="">
@@ -77,7 +77,8 @@
         </div>
         <div class="small-font illustration-credit2">
             神爱世人，芙门永存！<br>
-            God loves the world,Furina lives forever!<br>
+            神は全ての人々を愛し、フリーナへの愛は永遠に続く!<br>
+            God loves all people, the Sect of Furina will last forever!<br>
         </div>
     </div>
 
