--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="scale-container" style="transform: scale(0.998532) translate(0.939794px, 0px);">
     <div class="text-center">
         <div class="small-font illustration-credit">
-            Hello from Furina's worshipper<br>
+            <br>Hello from Furina's worshipper<br>
         </div>
         <div class="scrolling-wrapper" id="autoScrollDiv">
             <img src="furina0.jpg" alt="Image 1" class="">
