--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             <a href="https://www.pixiv.net/users/552160"target="_blank">紅シャケ</a>
         </div>
         <div class="small-font illustration-credit2">
-            神爱世人，芙门永存！<br>
-            神は全ての人々を愛し、フリーナへの愛は永遠に続く!<br>
-            God loves all people, the Sect of Furina will last forever!<br>
+            永世领唱，不休独舞。神爱世人，芙门永存！<br>
+            永遠にリードして歌い、休まずに独りで踊る。神は全ての人々を愛し、フリーナへの愛は永遠に続く!<br>
+            Eternally leading the chorus, ceaselessly dancing alone.God loves all people, the Sect of Furina will last forever!<br>
         </div>
     </div>
 
