--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             <img src="furina10.jpg" alt="Image 11" class="">
             <img src="furina11.jpg" alt="Image 12" class="">
             <img src="furina12.jpg" alt="Image 13" class="">
+            <img src="furina13.jpg" alt="Image 13" class="">
+            <img src="furina14.jpg" alt="Image 13" class="">
             <img src="furina0.jpg" alt="Image 1" class="">
             <img src="furina1.jpg" alt="Image 2" class="">
             <img src="furina2.jpg" alt="Image 3" class="">
@@ -57,6 +59,8 @@
             <img src="furina10.jpg" alt="Image 11" class="">
             <img src="furina11.jpg" alt="Image 12" class="">
             <img src="furina12.jpg" alt="Image 13" class="">
+            <img src="furina13.jpg" alt="Image 13" class="">
+            <img src="furina14.jpg" alt="Image 13" class="">
         </div>
     </div>
     <div class="text-center">
@@ -74,6 +78,7 @@
             <a href="https://www.pixiv.net/users/91987423"target="_blank">剣を持つ于桑</a>
             <a href="https://www.pixiv.net/users/7216525"target="_blank">そらに</a>
             <a href="https://www.pixiv.net/users/552160"target="_blank">紅シャケ</a>
+            <a href="https://www.pixiv.net/users/76285929"target="_blank">ineka</a>
         </div>
         <div class="small-font illustration-credit2">
             永世领唱，不休独舞。神爱世人，芙门永存！<br>
@@ -144,7 +149,7 @@
 
 
 
-        const n = 13;  // 图片数量
+        const n = 15;  // 图片数量
         let totalWidthOfNImages = 5*n-4;  // 5*n涨图片
         window.addEventListener('load', function () {
             // 当页面加载时，计算前n张图片的宽度之和
